# casa

./: README.md  pyproject.toml  todo.md
src/casa/: __init__.py  grammar.py  llm.py
src/casa/samplers/: __init__.py  base.py  cars.py  gcd.py  mcmc.py  rejection.py
src/casa/utils/: __init__.py  grammar_logits_processor.py  helpers.py  llguidance_recognizer.py  oracle_logits_processor.py  oracle_trie.py  scoring.py  xgrammar_recognizer.py
tests/: test_asap.py  test_gcd.py
