[project]
name = "casa"
version = "0.1.0"
description = "Constrained Aligned Sampling Algorithms"

readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["language-models", "sampling", "constrained-generation", "grammar"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
	"accelerate>=1.10.1",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
    "llguidance>=0.7.0",
    "rich>=14.1.0",
    "xgrammar>=0.1.0",
    "kernels>=0.12,<0.15"
]

[project.urls]
Homepage = "https://github.com/LargeLorisModels/casa.git"
Repository = "https://github.com/LargeLorisModels/casa.git"
"Bug Tracker" = "https://github.com/LargeLorisModels/casa/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.0.260",
]